# echo

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/: CODEOWNERS  (+1 more)
services/echo_backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
services/echo_backend/app/: __init__.py  main.py
services/echo_backend/app/config/: branding.py
services/echo_backend/app/models/: chat.py  health.py  notes.py
services/echo_backend/app/routers/: chat.py  health.py  notes.py
services/echo_backend/app/services/: external.py  notes_store.py
services/echo_backend/database/: _client.py
services/echo_backend/deploy/cloudrun/: staging.yaml
services/echo_backend/modal_jobs/: Dockerfile  Dockerfile.notifications_job
services/echo_backend/models/: auth.py  brain.py  brain_contract_v1.json
services/echo_backend/routers/: brain.py  brain_auth.py  other.py  sync.py  transcribe.py
services/echo_backend/scripts/: diff_brain_contracts.py  generate_brain_contract_v1_snapshot.py  regenerate_snapshot.py
services/echo_backend/tests/: __init__.py  conftest.py  test_brain_auth.py  test_brain_chat_stub.py  test_brain_contract_snapshot.py  test_brain_health.py  test_brain_stream_stub.py  test_brain_stt_stub.py  test_brain_tts_stub.py  test_contract_canonicalization.py  test_cors.py  test_health.py  test_normalization_determinism.py  test_openai_provider.py
services/echo_backend/utils/: encryption.py  notifications.py  translation.py
(+537 files in other folders)
